check.txt
   Compiling proc-macro2 v1.0.24
   Compiling unicode-xid v0.2.1
   Compiling syn v1.0.48
warning: associated function is never used: `borrow_triangle`
  --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:92:8
   |
92 |     fn borrow_triangle(&mut self,i:usize )->Result<&mut Triangle3D,String>{
   |        ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated function is never used: `invalidate`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:106:8
    |
106 |     fn invalidate(&mut self, i:usize)->Result<(),String>{
    |        ^^^^^^^^^^

warning: associated function is never used: `mark_as_neighbours`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:131:8
    |
131 |     fn mark_as_neighbours(&mut self, i1: usize, edge_1: usize, i2 : usize) -> Result<(),String> {        
    |        ^^^^^^^^^^^^^^^^^^

warning: associated function is never used: `get_opposite_vertex`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:215:8
    |
215 |     fn get_opposite_vertex(&self, triangle: &Triangle3D, edge: Segment3D )->Result<Point3D,String> {
    |        ^^^^^^^^^^^^^^^^^^^

warning: associated function is never used: `get_flipped_aspect_ratio`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:236:8
    |
236 |     fn get_flipped_aspect_ratio(&self, index:usize,edge:usize)->Result<f64,String>{
    |        ^^^^^^^^^^^^^^^^^^^^^^^^

warning: associated function is never used: `flip_diagonal`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:301:8
    |
301 |     fn flip_diagonal(&mut self,index: usize, edge: usize)->Result<(),String>{
    |        ^^^^^^^^^^^^^

warning: associated function is never used: `split_edge`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:468:8
    |
468 |     fn split_edge(&mut self, base_index : usize, base_edge : usize, p : Point3D )-> Result<(),String> {
    |        ^^^^^^^^^^

warning: associated function is never used: `split_triangle`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:592:8
    |
592 |     fn split_triangle(&mut self, i:usize, p:Point3D)->Result<(),String>{
    |        ^^^^^^^^^^^^^^

warning: associated function is never used: `restore_delaunay`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:735:8
    |
735 |     fn restore_delaunay(&mut self, max_aspect_ratio: f64){
    |        ^^^^^^^^^^^^^^^^

warning: associated function is never used: `add_point_to_triangle`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:802:8
    |
802 |     fn add_point_to_triangle(&mut self, index: usize, point: Point3D, code: usize) -> Result<(),String>{
    |        ^^^^^^^^^^^^^^^^^^^^^

warning: associated function is never used: `add_point`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:820:8
    |
820 |     fn add_point(&mut self, point : Point3D) -> Result<(),String>{
    |        ^^^^^^^^^

warning: associated function is never used: `refine`
   --> /Users/german/Documents/simple/geometry3d/src/triangulation3d.rs:838:8
    |
838 |     fn refine(&mut self, max_area : f64, max_aspect_ratio : f64) -> Result<(),String>{
    |        ^^^^^^

warning: 12 warnings emitted

    Checking gas_properties v0.1.0 (/Users/german/Documents/simple/physics/gas_properties)
   Compiling quote v1.0.7
   Compiling derive-getters v0.2.0
    Checking building_model v0.1.0 (/Users/german/Documents/simple/building_model)
warning: unused import: `geometry3d::loop3d::Loop3D`
 --> /Users/german/Documents/simple/building_model/src/fenestration.rs:3:5
  |
3 | use geometry3d::loop3d::Loop3D;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::construction::*`
 --> /Users/german/Documents/simple/building_model/src/fenestration.rs:6:5
  |
6 | use crate::construction::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^

warning: field is never read: `shading`
  --> /Users/german/Documents/simple/building_model/src/fenestration.rs:41:5
   |
41 |     shading: Option<usize>,
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: 3 warnings emitted

    Checking convection v0.1.0 (/Users/german/Documents/simple/physics/convection)
    Checking finite_difference_thermal_solver v0.1.0 (/Users/german/Documents/simple/physics/finite_difference_thermal_solver)
warning: unused import: `std::rc::Rc`
 --> src/model.rs:1:5
  |
1 | use std::rc::Rc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `construction` found for struct `std::rc::Rc<building_model::surface::Surface>` in the current scope
  --> src/surface.rs:98:44
   |
98 |         build_thermal_network(&ret.surface.construction(), dt, &nodes, rs_i, rs_o, &mut ret.k_prime, &mut ret.full_rsi, &mut ret.full_rso, &mut ret.c_i, &mut ret.c_o).unwrap();
   |                                            ^^^^^^^^^^^^ private field, not a method

error[E0308]: mismatched types
   --> src/surface.rs:107:9
    |
106 |     pub fn area(&self)->f64{
    |                         --- expected `f64` because of return type
107 |         self.surface.area()
    |         ^^^^^^^^^^^^^^^^^^^ expected `f64`, found enum `std::result::Result`
    |
    = note: expected type `f64`
               found enum `std::result::Result<f64, std::string::String>`

error[E0599]: no method named `r_value` found for reference `&building_model::construction::Construction` in the current scope
   --> src/surface.rs:299:19
    |
299 |         let r = c.r_value()+rs_i+rs_o;
    |                   ^^^^^^^ method not found in `&building_model::construction::Construction`

error[E0599]: no method named `layer` found for reference `&building_model::construction::Construction` in the current scope
   --> src/surface.rs:313:27
    |
313 |             let layer = c.layer(i).unwrap();
    |                           ^^^^^ method not found in `&building_model::construction::Construction`

error[E0599]: no method named `layer` found for reference `&building_model::construction::Construction` in the current scope
   --> src/surface.rs:318:27
    |
318 |             let layer = c.layer(i).unwrap();
    |                           ^^^^^ method not found in `&building_model::construction::Construction`

error[E0599]: no method named `layer` found for reference `&building_model::construction::Construction` in the current scope
   --> src/surface.rs:329:26
    |
329 |         let material = c.layer(n_layer).unwrap();    
    |                          ^^^^^ method not found in `&building_model::construction::Construction`

error[E0599]: no method named `layer` found for reference `&building_model::construction::Construction` in the current scope
   --> src/surface.rs:338:31
    |
338 |                 let layer = c.layer(n_layer).unwrap();
    |                               ^^^^^ method not found in `&building_model::construction::Construction`

error[E0599]: no method named `layer` found for reference `&building_model::construction::Construction` in the current scope
   --> src/surface.rs:412:26
    |
412 |         let material = c.layer(n_layer).unwrap();
    |                          ^^^^^ method not found in `&building_model::construction::Construction`

error[E0599]: no method named `layer` found for reference `&building_model::construction::Construction` in the current scope
   --> src/surface.rs:476:23
    |
476 |         let layer = c.layer(n_layer).unwrap();
    |                       ^^^^^ method not found in `&building_model::construction::Construction`

error: aborting due to 9 previous errors; 1 warning emitted

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `finite_difference_thermal_solver`.

To learn more, run the command again with --verbose.
